umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_issue_1476.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: extended_molecule
category: extended_molecule
molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 124, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 124, col 0"
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C60
    atom_count: 60
    bond_count: 60
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C60
    atom_count: 60
    bond_count: 60
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
